<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context="com.rick.anime.screen_anime.anime_details.AnimeDetailsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/details_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:elevation="@dimen/data_ui_design_background_card_elevation"
        app:cardCornerRadius="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:background="@drawable/data_ui_design_gradient_background"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="@dimen/data_ui_design_toolbar_margin_top"
                app:layout_collapseMode="pin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_gravity="start|center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:gravity="start|center_vertical"
                        android:hint="@string/anime_screen_anime_anime_details_no_title"
                        android:textAlignment="gravity"
                        android:textAppearance="?attr/textAppearanceHeadline6" />

                </LinearLayout>

            </androidx.appcompat.widget.Toolbar>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:elevation="@dimen/data_ui_design_item_card_elevation"
                app:shapeAppearanceOverlay="@style/DataUiDesignRoundedCorners">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/image"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/data_ui_design_long_image_height" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/data_ui_design_text_title_h_margin"
                android:text="@string/anime_screen_anime_anime_details_overview"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/data_ui_design_text_extras_h_margin"
                android:textAppearance="?attr/textAppearanceBody1" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/data_ui_design_text_extras_h_margin"
                android:hint="@string/anime_screen_anime_anime_details_synopsis"
                android:textAppearance="?attr/textAppearanceBody1" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/show_translation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/data_ui_design_translate_margin"
                android:gravity="end|center_vertical"
                android:padding="2dp"
                android:text="@string/anime_screen_anime_anime_details_show_translation"
                android:textAlignment="gravity"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@android:color/holo_blue_dark"
                android:textStyle="bold"
                android:visibility="gone" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/pg_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/data_ui_design_text_extras_h_margin"
                android:layout_marginVertical="@dimen/data_ui_design_text_extras_v_margin"
                android:text="@string/anime_screen_anime_anime_details_pg_rating"
                android:textAppearance="?attr/textAppearanceBody1" />

            <View style="@style/data_ui_design_divider.horizontal" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/airing_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/data_ui_design_text_extras_h_margin"
                android:layout_marginVertical="@dimen/data_ui_design_text_extras_v_margin"
                android:text="@string/anime_screen_anime_anime_details_airing_status"
                android:textAppearance="?attr/textAppearanceBody1" />

            <View style="@style/data_ui_design_divider.horizontal" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/aired"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/data_ui_design_text_extras_h_margin"
                android:layout_marginVertical="@dimen/data_ui_design_text_extras_v_margin"
                android:text="@string/anime_screen_anime_anime_details_aired"
                android:textAppearance="?attr/textAppearanceBody1" />

            <View style="@style/data_ui_design_divider.horizontal" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/episodes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/data_ui_design_text_extras_h_margin"
                android:layout_marginVertical="@dimen/data_ui_design_text_extras_v_margin"
                android:text="@string/anime_screen_anime_anime_details_episodes"
                android:textAppearance="?attr/textAppearanceBody1" />

            <View style="@style/data_ui_design_divider.horizontal" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/runtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/data_ui_design_text_extras_h_margin"
                android:layout_marginVertical="@dimen/data_ui_design_text_extras_v_margin"
                android:text="@string/anime_screen_anime_anime_details_runtime"
                android:textAppearance="?attr/textAppearanceBody1" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/data_ui_design_text_extras_h_margin"
                android:text="@string/anime_screen_anime_anime_details_genres"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:textStyle="bold" />

            <com.google.android.material.chip.ChipGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="false"
                android:foregroundGravity="center_horizontal"
                android:layoutDirection="locale"
                android:theme="@style/Theme.MaterialComponents.Light"
                app:singleLine="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/genre_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/data_ui_design_chip_background"
                    android:gravity="center"
                    android:text="@string/anime_screen_anime_anime_details_genre_one"
                    android:textAppearance="?attr/textAppearanceBody2"
                    app:chipBackgroundColor="@color/data_ui_design_color_on_surface"
                    app:chipStrokeColor="@color/data_ui_design_black"
                    app:chipStrokeWidth="1dp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/genre_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/data_ui_design_chip_background"
                    android:gravity="center"
                    android:text="@string/anime_screen_anime_anime_details_genre_two"
                    android:textAppearance="?attr/textAppearanceBody2"
                    app:chipBackgroundColor="@color/data_ui_design_color_on_surface"
                    app:chipStrokeColor="@color/data_ui_design_black"
                    app:chipStrokeWidth="1dp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/genre_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/data_ui_design_chip_background"
                    android:gravity="center"
                    android:text="@string/anime_screen_anime_anime_details_genre_three"
                    android:textAppearance="?attr/textAppearanceBody2"
                    app:chipBackgroundColor="@color/data_ui_design_color_on_surface"
                    app:chipStrokeColor="@color/data_ui_design_black"
                    app:chipStrokeWidth="1dp" />

            </com.google.android.material.chip.ChipGroup>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/data_ui_design_text_title_v_margin"
                android:text="@string/anime_screen_anime_anime_details_ratings"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:textStyle="bold" />

            <com.google.android.material.chip.ChipGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="false"
                android:foregroundGravity="center_horizontal"
                android:layoutDirection="locale"
                android:theme="@style/Theme.MaterialComponents.Light"
                app:singleLine="false">

                <com.google.android.material.chip.Chip
                    android:id="@+id/score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/data_ui_design_chip_background"
                    android:gravity="start"
                    android:text="@string/anime_screen_anime_anime_details_score"
                    android:textAppearance="?attr/textAppearanceBody2"
                    app:chipBackgroundColor="@color/data_ui_design_color_on_surface"
                    app:chipStrokeColor="@color/data_ui_design_black"
                    app:chipStrokeWidth="1dp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/scored_by"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/data_ui_design_chip_background"
                    android:gravity="center_horizontal"
                    android:text="@string/anime_screen_anime_anime_details_scored_by"
                    android:textAppearance="?attr/textAppearanceBody2"
                    app:chipBackgroundColor="@color/data_ui_design_color_on_surface"
                    app:chipStrokeColor="@color/data_ui_design_black"
                    app:chipStrokeWidth="1dp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/favorites"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/data_ui_design_chip_background"
                    android:gravity="end"
                    android:text="@string/anime_screen_anime_anime_details_favorites"
                    android:textAppearance="?attr/textAppearanceBody2"
                    app:chipBackgroundColor="@color/data_ui_design_color_on_surface"
                    app:chipStrokeColor="@color/data_ui_design_black"
                    app:chipStrokeWidth="1dp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/popularity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/data_ui_design_chip_background"
                    android:gravity="end"
                    android:text="@string/anime_screen_anime_anime_details_popularity"
                    android:textAppearance="?attr/textAppearanceBody2"
                    app:chipBackgroundColor="@color/data_ui_design_color_on_surface"
                    app:chipStrokeColor="@color/data_ui_design_black"
                    app:chipStrokeWidth="1dp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/rank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/data_ui_design_chip_background"
                    android:gravity="end"
                    android:text="@string/anime_screen_anime_anime_details_rank"
                    android:textAppearance="?attr/textAppearanceBody2"
                    app:chipBackgroundColor="@color/data_ui_design_color_on_surface"
                    app:chipStrokeColor="@color/data_ui_design_black"
                    app:chipStrokeWidth="1dp" />

            </com.google.android.material.chip.ChipGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/url"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:text="@string/anime_screen_anime_anime_details_link_web_page"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="@android:color/holo_blue_dark"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/trailer"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/data_ui_design_text_title_v_margin"
                android:gravity="start|center_vertical"
                android:text="@string/anime_screen_anime_anime_details_link_trailer"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="@android:color/holo_blue_dark"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</ScrollView>
